<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/containerLinear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/distancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dist_ncia_km"
            android:inputType="numberDecimal"
            android:autofillHints="none" />

        <EditText
            android:id="@+id/valor_litro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_do_litro_r"
            android:inputType="numberDecimal"
            android:autofillHints="none"/>

        <EditText
            android:id="@+id/media_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/m_dia_km_l"
            android:inputType="numberDecimal"
            android:autofillHints="none" />
        <TextView
            android:id="@+id/txt_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado_aparecer_aqui"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:paddingTop="12dp"
            android:gravity="center"/>



        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:layout_marginTop="12dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
